# docfix

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/admin-console/: .env.example  package.json
docs/: 00_PILAR_ONBOARDING.md  01_ARQUITETURA.md  02_SEGURANCA_BASELINE.md  03_DADOS_E_CATALOGO.md  04_API_CONTRATOS.md  05_FILA_CONTRATOS.md  06_CONFIDENCE_GATE.md  07_REPO_E_DEV_WORKFLOW.md  08_PLANO_DE_EXECUCAO.md  09_PLANO_DE_PARALELISMO.md  10_OPENAPI.md  11_TECH_STACK_BASELINE.md  12_AGENT_GUARDRAILS.md
docs/schemas/: CARTAO_PONTO_v1.md
infra/: docker-compose.yml
services/api/: .env.example  README.md  package.json  tsconfig.json
services/api/migrations/: 1730000000000_init_minimo_catalogo_jobs.js  1730000001000_align_job_status_openapi.js
services/api/scripts/: db-seed.mjs
services/api/src/: app.ts  auth.ts  config.ts  infra.ts  server.ts  types.ts
services/worker/: .env.example  README.md  pyproject.toml
services/worker/src/worker/: __init__.py  __main__.py
