[tool.poetry]
name = "docfix-worker"
version = "0.1.0"
description = "Worker Python para processamento assíncrono"
authors = ["DocFix Team <dev@docfix.local>"]
packages = [{ include = "worker", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
